--- a/putin/m/index.html
+++ b/putin/m/index.html
@@ -28,12 +28,14 @@
         <table border="1" rules="all" width="100%">
             <tr>
                 <td rowspan="4">Ресублика Беларусь</td>
-                <td><a href="/political-na-postsovet-space/country/belarus/gos-simvolika/gerb-of-Belarus.png" download><button>Скачать
+                <td><a href="/political-na-postsovet-space/country/belarus/gos-simvolika/gerb-of-Belarus.png"
+                        download><button>Скачать
                             герб РБ</button></a></td>
 
             </tr>
             <tr>
-                <td><a href="/political-na-postsovet-space/country/belarus/gos-simvolika/flag-of-Belarus.png"><button>Скачать Флаг
+                <td><a href="/political-na-postsovet-space/country/belarus/gos-simvolika/flag-of-Belarus.png"><button>Скачать
+                            Флаг
                             РБ</button></a></td>
             </tr>
             <tr>
@@ -41,7 +43,8 @@
                             Лукашенко</button></a></td>
             </tr>
             <tr>
-                <td><a href="/political-na-postsovet-space/country/belarus/gos-simvolika/gimn-of-Belarus.mp3"><button>Скачать Гимн Белоруссии</button></a></td>
+                <td><a href="/political-na-postsovet-space/country/belarus/gos-simvolika/gimn-of-Belarus.mp3"><button>Скачать
+                            Гимн Белоруссии</button></a></td>
             </tr>
             <tr>
                 <td rowspan="2">ДНР</td>
@@ -107,9 +110,14 @@
 
 
 
+
         </table>
+        <a href="Ski Mask The Slump God - Take A Step Back.mp3" download><button>Take A Step Back</button></a>
+        <a href="XXXTentacion - Hope.mp3" download><button>Hope</button></a>
+        <a href="XXXTentacion - Look At Me.mp3" download><button>Look At Me</button></a>
+        <a href="XXXTentacion - RIP Roach feat. $ki Mask The Slump God.mp3" download><button>RIP Roach feat. $ki Mask The Slump God</button></a>
         <footer>
-          
+
             <a href="/political-na-postsovet-space/contacts/"><button>Поддержка</button></a>
             <a href="/political-na-postsovet-space/legal/"><button>Правовая информация</button></a>
         </footer>
