--- a/country/index.html
+++ b/country/index.html
@@ -79,8 +79,8 @@
                     </tr>
                     <tr>
                         <td><a href="russia/">Российская Федерация</td>
-                        <td><img src="russia/gos-simvolika/gerb-of-Russia.png" alt="" width="100px"></td>
-                        <td><img src="russia/gos-simvolika/flag-of-Russia.png" alt="" width="100px"></td>
+                        <td><img src="russia/gos-simvolika/gerb-of-RSFSR.png" alt="" width="100px"><figcaption>1978-1992 (в составе СССР)</figcaption><br><img src="russia/gos-simvolika/gerb-of-Russia-before-1993.png" alt="" width="100px"><br><figcaption>1992-1993</figcaption><br><img src="russia/gos-simvolika/gerb-of-Russia.png" alt="" width="100px"><figcaption>1993-н. в.</figcaption> </td>
+                        <td><img src="russia/gos-simvolika/flag-of-RSFSR.png" alt="" width="100px"><figcaption>1954-1991 (в составе СССР)</figcaption><br><img src="russia/gos-simvolika/flag-of-Russia-before-1993.png" alt="" width="100px"><br><figcaption>1991-1993</figcaption><br><img src="russia/gos-simvolika/flag-of-Russia.png" alt="" width="100px"><figcaption>1993-н. в.</figcaption></td>
                         <td>Москва</td>
                         <td>Владимир Владимирович Путин</td>
                         <td><img src="russia/800px-Vladimir_Putin_11-10-2020_(cropped).jpg" alt="" width="250px"></td>
