--- a/putin/m/index.html
+++ b/putin/m/index.html
@@ -69,53 +69,71 @@
                             Гимн ЛНР</button></a></td>
             </tr>
             <tr>
-                <td rowspan="5">Российская Федерация</td>
+                <td>Российская Федерация</td>
                 <td><a
                         href="/political-na-postsovet-space/country/russia/800px-Vladimir_Putin_11-10-2020_(cropped).jpg"><button>Скачать
-                            Фото Путина</button></a></td>
+                            Фото Путина</button></a>
+                    <br>
+                    <a href="/political-na-postsovet-space/country/russia/gos-simvolika/anthem-choir.mp3"
+                        download><button>Скачать Гимн России (хор)</button></a><br>
+
+                    <a href="/political-na-postsovet-space/country/russia/gos-simvolika/anthem-instrumental.mp3"
+                        download><button>Скачать Гимн России </button></a>
+                    <br>
+
+                    <a href="/political-na-postsovet-space/country/russia/gos-simvolika/flag-of-Russia.png"><button>Скачать
+                            Флаг РФ</button></a>
+                    <br>
+                    <a href="/political-na-postsovet-space/country/russia/gos-simvolika/gerb-of-Russia.png"><button>Скачать
+                            Герб РФ</button></a>
+                    <br>
+                    <a href="/political-na-postsovet-space/country/russia/gos-simvolika/flag-of-RSFSR.png"><button>Скачать
+                            флаг РСФСР</button></a>
+                    <br>
+                    <a href="/political-na-postsovet-space/country/russia/gos-simvolika/gerb-of-RSFSR.png"><button>Скачать
+                            герб РСФСР</button></a>
+
+                    <br>
+                    <a href="/political-na-postsovet-space/country/russia/gos-simvolika/flag-of-Russia-before-1993.png"><button>Скачать
+                            флаг РФ до 1993</button></a>
+
+                    <br>
+                    <a href="/political-na-postsovet-space/country/russia/gos-simvolika/gerb-of-Russia-before-1993.png"><button>Скачать
+                            флаг РФ до 1993</button></a>
+                </td>
             </tr>
             <tr>
-                <td><a href="/political-na-postsovet-space/country/russia/gos-simvolika/anthem-choir.mp3"
-                        download><button>Скачать Гимн России (хор)</button></a></td>
-            </tr>
-            <tr>
-                <td><a href="/political-na-postsovet-space/country/russia/gos-simvolika/anthem-instrumental.mp3"
-                        download><button>Скачать Гимн России </button></a></td>
-            </tr>
-            <tr>
-                <td><a href="/political-na-postsovet-space/country/russia/gos-simvolika/flag-of-Russia.png"><button>Скачать
-                            Флаг РФ</button></a></td>
-            </tr>
-            <tr>
-                <td><a href="/political-na-postsovet-space/country/russia/gos-simvolika/gerb-of-Russia.png"><button>Скачать
-                            Герб РФ</button></a></td>
-            </tr>
-            <tr>
-                <td rowspan="4">СССР</td>
+                <td>СССР</td>
                 <td><a href="/political-na-postsovet-space/country/ussr/flag-of-USSR.png"><button>Скачать Флаг
-                            СССР</button></a></td>
+                            СССР</button></a>
+                    <br>
+                    <a href="/political-na-postsovet-space/country/ussr/gerb-of-USSR.png"><button>Скачать Герб
+                            СССР</button></a>
+                    <br>
+                    <a href="/political-na-postsovet-space/country/ussr/Gorbachev_(cropped).png"><button>Скачать Фото
+                            Горбачёва</button></a>
+                    <br>
+                    <a href="/political-na-postsovet-space/country/ussr/gimn-of-USSR.mp3"><button>Скачать Гимн
+                            СССР</button></a>
+                </td>
             </tr>
             <tr>
-                <td><a href="/political-na-postsovet-space/country/ussr/gerb-of-USSR.png"><button>Скачать Герб
-                            СССР</button></a></td>
-            </tr>
-            <tr>
-                <td><a href="/political-na-postsovet-space/country/ussr/Gorbachev_(cropped).png"><button>Скачать Фото
-                            Горбачёва</button></a></td>
-            </tr>
-            <tr>
-                <td><a href="/political-na-postsovet-space/country/ussr/gimn-of-USSR.mp3"><button>Скачать Гимн
-                            СССР</button></a></td>
+                <td>Украина</td>
+                <td><a href="/political-na-postsovet-space/country/ukraine/gos-simvolika/Anthem-of-Ukraine.mp3" download><button>Скачать Гимн Украины</button></a>
+                  
+                </td>
             </tr>
 
 
 
 
         </table>
-        <a href="Ski Mask The Slump God - Take A Step Back.mp3" download><button>Take A Step Back</button></a>
-        <a href="XXXTentacion - Hope.mp3" download><button>Hope</button></a>
-        <a href="XXXTentacion - Look At Me.mp3" download><button>Look At Me</button></a>
-        <a href="XXXTentacion - RIP Roach feat. $ki Mask The Slump God.mp3" download><button>RIP Roach feat. $ki Mask The Slump God</button></a>
+        <br><br><br><br><br>
+        <a href="Ski Mask The Slump God - Take A Step Back.mp3" download><button>Take A Step Back</button></a><br>
+        <a href="XXXTentacion - Hope.mp3" download><button>Hope</button></a><br>
+        <a href="XXXTentacion - Look At Me.mp3" download><button>Look At Me</button></a><br>
+        <a href="XXXTentacion - RIP Roach feat. $ki Mask The Slump God.mp3" download><button>RIP Roach feat. $ki Mask
+                The Slump God</button></a><br>
         <footer>
 
             <a href="/political-na-postsovet-space/contacts/"><button>Поддержка</button></a>
