--- a/putin/to-do/index.html
+++ b/putin/to-do/index.html
@@ -27,7 +27,7 @@
         button{
             width: 100%;
             background: #0000;
-            font-size: 15pt;
+            font-size: 15vh;
             border: 0px;
             color: white;
         }
