--- a/country/belarus/gos-simvolika/index.html
+++ b/country/belarus/gos-simvolika/index.html
@@ -45,10 +45,10 @@
                 Национальный флаг используется с 7 июня 1995 года, через месяц после референдума. Флаг, наряду с гербом,
                 подвергся значимым изменениям. Главными элементами флага являются две полосы — красная и зелёная. С
                 левой стороны расположена вертикальная полоска с находящимся в нём орнаменте. Данный флаг является
-                копией флага Белорусской ССР (1951), использовавшийся во времена СССР. <img src="flag-of-Belarus.png"
-                    alt="" class="photo" width="150px"> В версии советских времён, в
-                верхнем левом углу были расположены серп и молот и красные штрихи в сегодняшнем флаге были белыми, а
-                белые — красными. Некоторые чиновники и агентства используют немного другие разновидности флага.
+                копией флага Белорусской ССР (1951), использовавшийся во времена СССР.
+            <div class="photo"><img src="flag-of-Belarus.png" alt="" class="photo"></div> В версии советских времён, в
+            верхнем левом углу были расположены серп и молот и красные штрихи в сегодняшнем флаге были белыми, а
+            белые — красными. Некоторые чиновники и агентства используют немного другие разновидности флага.
             </p>
             <p>
                 Несмотря на официальную замену флага, противники действующего президента страны Александра Лукашенко
@@ -62,7 +62,7 @@
                 Также как и флаг, герб был выбран на референдуме 1995 года. Элементы герба включают в себя полосы с
                 цветами флага Беларуси, контуры границы Белоруссии, колосья пшеницы и красную звезду. На двух нижних
                 лентах на белорусском языке написано название страны. Разновидность этого герба была официальной
-                эмблемой Белорусской ССР, созданной <img src="gerb-of-Belarus.png" alt="" class="photo" width="120px">
+                эмблемой Белорусской ССР, созданной <div class="photo"><img src="gerb-of-Belarus.png" alt="" class="photo"></div>
                 Иваном Дубасовым в 1950 году. В версии советских времен, серп и
                 молот были на месте контуров границы Беларуси и все полосы были красными. Слева и справа был написан
                 социалистический девиз Пролетарии всех стран, соединяйтесь!, написанный на белорусском и русском
