--- a/country/belarus/index.html
+++ b/country/belarus/index.html
@@ -27,7 +27,7 @@
         </div>
         <div id="nav-country">
             <a href="#" id="id">Основная информация</a>
-            <a href="gos-simvolika/" >Государственная символика</a>
+            <a href="gos-simvolika/">Государственная символика</a>
         </div>
     </header>
     <main>
@@ -142,7 +142,7 @@
                     <tr>
                         <th scope="col">№ </th>
                         <th scope="col">Срок</th>
-                        <th scope="col">Фото</th>
+
                         <th scope="col">Фамилия Имя Отчество (Год жизни)</th>
                         <th scope="col" colspan="2">Срок полномочий</th>
                         <th scope="col">Длительность правления</th>
@@ -152,7 +152,7 @@
                     <tr>
                         <th scope="row" rowspan="6">1</th>
                         <td>1</td>
-                        <td rowspan="6"><img src="Lukashenko.jpg" alt="" width="250px"></td>
+
                         <td rowspan="6">Александр Григорьевич Лукашенко <br> (р. 1954)</td>
                         <td>20 июля 1994</td>
                         <td>20 сентября 2001</td>
@@ -190,11 +190,19 @@
                     </tr>
                 </tbody>
             </table>
+            <div class="president">
+                <div class="lukashenko">
+                    <img src="Lukashenko.jpg" alt="">
+                    <figcaption>Лукашенко</figcaption>
+                </div>
+
+
+            </div>
             <h2>Митинги против Выборов </h2>
             <p>
                 После подсечта голосов в Республике начались митинги против того, чтобы А. Г. Лкашенко сновал встал
                 Президентом. Я считаю так: Лукашенко у "руля" уже более 20 лет он все знает что делается в стране и
-                большая часть народа поддержала его, поэтому пускай правит страной. А те кто минтигует то те люди 
+                большая часть народа поддержала его, поэтому пускай правит страной. А те кто минтигует то те люди
                 находятся под контролем США.
             </p>
             <p>
