--- a/country/index.html
+++ b/country/index.html
@@ -54,7 +54,7 @@
                         <th scope="col">Флаг</th>
                         <th scope="col">Столица</th>
                         <th scope="col">Глава / Президент</th>
-                        <th scope="col">Фото</th>
+
                         <th scope="col">Дата независимости / дата распада СССР</th>
                         <th scope="col">Территория (км<sup>2</sup>)</th>
                         <th scope="col">Население</th>
@@ -68,8 +68,8 @@
                         <td><img src="ussr/gerb-of-USSR.png" alt="" width="100px"></td>
                         <td><img src="ussr/flag-of-USSR.png" alt="" width="100px"></td>
                         <td>Москва</td>
-                        <td>Михаил Сергеевич Горбачёв</td>
-                        <td><img src="ussr/Gorbachev_(cropped).png" alt="" width="250px"></td>
+                        <td>Михаил <br> Сергеевич <br> Горбачёв</td>
+
                         <td>26 декабря 1991</td>
                         <td>22 402 200</td>
                         <td>292 610 734</td>
@@ -94,8 +94,8 @@
                             <figcaption>1993-н. в.</figcaption>
                         </td>
                         <td>Москва</td>
-                        <td>Владимир Владимирович Путин</td>
-                        <td><img src="russia/800px-Vladimir_Putin_11-10-2020_(cropped).jpg" alt="" width="250px">
+                        <td>Владимир <br> Владимирович <br> Путин</td>
+
                         </td>
                         <td>12 декабря 1991</td>
                         <td>17 125 191</td>
@@ -109,8 +109,8 @@
                         <td><img src="ukraine/gerb-of-ukraine.png" alt=""></td>
                         <td><img src="ukraine/flag-of-ukraine.png" alt=""></td>
                         <td>Киев</td>
-                        <td>Владимир Александрович Зеленский</td>
-                        <td><img src="800px-Volodymyr_Zelensky_Official_portrait_(cropped).jpg" alt="" width="250px">
+                        <td>Владимир <br> Александрович <br> Зеленский</td>
+
                         </td>
                         <td>24 августа 1991</td>
                         <td>603 549</td>
@@ -124,8 +124,8 @@
                         <td><img src="belarus/gos-simvolika/gerb-of-Belarus.png" alt="" width="100px"></td>
                         <td><img src="belarus/gos-simvolika/flag-of-Belarus.png" alt="" width="100px"></td>
                         <td>Минск</td>
-                        <td>Александр Григорьевич Лукашенко</td>
-                        <td><img src="belarus/Lukashenko.jpg" alt="" width="250px"></td>
+                        <td>Александр <br> Григорьевич <br> Лукашенко</td>
+
                         <td>25 августа 1991</td>
                         <td>207 600</td>
                         <td>9 475 600</td>
@@ -138,9 +138,9 @@
                         <td><img src="dni/gos-simvolika/gerb-of-Dni.png" width="100px"></td>
                         <td><img src="dni/gos-simvolika/flag-of-Dni.png" width="100px"></td>
                         <td>Донецк</td>
-                        <td>Денис Владимирович Пушилин</td>
-                        <td><img src="dni/glava-of-Dni.jpg" alt="" width="250px"></td>
-                        <td>7 апреля 2014 (от Украины)</td>
+                        <td>Денис <br> Владимирович <br> Пушилин</td>
+
+                        <td>7 апреля 2014  <br>(от Украины)</td>
                         <td>7 853</td>
                         <td>2 244 547</td>
                         <td>285,82</td>
@@ -151,9 +151,9 @@
                         <td><img src="lnr/gos-simvolika/gerb-of-Lnr.png" width="100px"></td>
                         <td><img src="lnr/gos-simvolika/flag-of-Lnr.png" width="100px"></td>
                         <td>Луганск</td>
-                        <td>Леонид Иванович Пасечник</td>
-                        <td><img src="lnr/Leonid_Pasechnik_2019.png" alt="" width="250px"></td>
-                        <td>12 мая 2014 (от Украины)</td>
+                        <td>Леонид <br> Иванович <br> Пасечник</td>
+
+                        <td>12 мая 2014 <br> (от Украины)</td>
                         <td>8 377</td>
                         <td>1 450 000</td>
                         <td>173,09</td>
@@ -162,11 +162,43 @@
 
                 </tbody>
             </table>
+            <div class="president">
+                <h3>Фото глав Государств Постсоветского пространоства</h3>
+                <div class="glava">
+                    <h4>СССР</h4>
+
+                    <img src="ussr/Gorbachev_(cropped).png" alt="" class="pres">
+                    <figcaption>Михаил Сергеевич Горбачёв <br> Председатель Верховного Совета СССР (25 мая 1989 — 15
+                        марта 1990) <br> Президент СССР (15 марта 1990 — 25 декабря 1991)</figcaption>
+
+                </div>
+                <br>
+                <div class="glava">
+                    <h4>Республика Беларусь</h4>
+                    <img src="belarus/Lukashenko.jpg" alt="" class="pres">
+                    <figcaption>Александр Григорьевич Лукашенко <br> Президент Республики Беларусь (с 20 июля 1994)
+                    </figcaption>
+                </div>
+                <br>
+                <div class="glava">
+                    <h4>Российская Федерация</h4>
+                    <img src="russia/800px-Vladimir_Putin_11-10-2020_(cropped).jpg" alt="" class="pres">
+                    <figcaption>Владимир Владимирович Путин <br> Президент Российский Федерации (с 7 мая 2012)
+                    </figcaption>
+                </div>
+
+                <br>
+                <div class="glava">
+                    <h4>Украина</h4>
+                    <img src="ukraine/gos-system/800px-Volodymyr_Zelensky_Official_portrait.jpg" alt="" class="pres">
+                    <figcaption>Владимир Александрович Зеленский <br> Президент Украины (с 2019)</figcaption>
+                </div>
+
+
+            </div>
             <br>
             <br>
-            <br>
-            <br>
-            <br>
+         
 
 
             <div id="primechania">
