--- a/country/russia/index.html
+++ b/country/russia/index.html
@@ -159,37 +159,24 @@
                     <tr>
                         <th scope="col">№ </th>
                         <th scope="col">Срок</th>
-                        <th scope="col">Фото</th>
+
                         <th scope="col"> Имя Отчество Фамилия (Год жизни)</th>
                         <th scope="col" colspan="2">Срок полномочий</th>
                         <th scope="col">Срок в годах и месяцах</th>
-                        <th scope="col">Действующие Председатели Правительства</th>
+
                     </tr>
                 </thead>
                 <tbody class="ussr">
                     <tr>
                         <th scope="row" rowspan="2" style="background: red;">1</th>
                         <td>1</td>
-                        <td rowspan="2">
-                            <img src="Boris.jpg" alt="">
-                        </td>
+
                         <td rowspan="2"><a href="https://ru.wikipedia.org/wiki/Ельцин,_Борис_Николаевич">Борис
                                 Николаевич Ельцин</a> <br> (1931—2007)</td>
                         <td>10 июля 1991</td>
                         <td>9 августа 1996</td>
                         <td>4 года 7 месяцев 9 дней</td>
-                        <td rowspan="2">
-                            <p>И. С. Силаев</p>
-                            <p>О. И. Лобов</p>
-                            <p>Б. Н. Ельцин</p>
-                            <p>Е. Т. Гайдар</p>
-                            <p>В. С. Черномырдин</p>
-                            <p>С. В. Кириенко</p>
-                            <p>В. С. Черномырдин</p>
-                            <p>Е. М. Примаков</p>
-                            <p>С. В. Степашин</p>
-                            <p>В. В. Путин</p>
-                        </td>
+
                     </tr>
                     <tr>
                         <td>2</td>
@@ -200,7 +187,7 @@
                     <tr>
                         <th scope="row" style="background: red;">-</th>
                         <td>-</td>
-                        <td rowspan="3"><img src="Vladimir_Vladimirovich_Putin.jpg" alt=""></td>
+
                         <td>
                             <a href="https://ru.wikipedia.org/wiki/Путин,_Владимир_Владимирович">Владимир
                                 Владимирович Путин</a> <br> <small>(исполняющий обязанности)</small>
@@ -208,12 +195,7 @@
                         <td>31 декабря 1999</td>
                         <td>7 мая 2000</td>
                         <td>4 месяцев, 1 неделя</td>
-                        <td rowspan="3">
-                            <p>М. М. Касьянов</p>
-                            <p>В. Б. Христенко</p>
-                            <p>М. Е. Фрадков</p>
-                            <p>В. А. Зубков</p>
-                        </td>
+
 
                     </tr>
                     <tr>
@@ -235,32 +217,25 @@
                     <tr>
                         <th scope="row" style="background: blue;">3</th>
                         <td>1</td>
-                        <td><img src="Dmitry_Anatolyevich_Medvedev.jpg" alt=""></td>
+
                         <td><a href="https://ru.wikipedia.org/wiki/Медведев,_Дмитрий_Анатольевич">Дмитрий Анатольевич
                                 Медведев</a> <br> (р. 1965)</td>
                         <td>7 мая 2008</td>
                         <td>7 мая 2012</td>
                         <td>4 года</td>
-                        <td>
-                            <p>В. В. Путин</p>
-                        </td>
+
                     </tr>
                     <tr>
                         <th scope="row" style="background: blue;">4</th>
                         <td>3</td>
-                        <td rowspan="2"><img src="800px-Vladimir_Putin_11-10-2020_(cropped).jpg" alt="" width="200px"></td>
+
+                        </td>
                         <td rowspan="2"><a href="https://ru.wikipedia.org/wiki/Путин,_Владимир_Владимирович">Владимир
                                 Владимирович Путин</a> <br> (р. 1952)</td>
                         <td>7 мая 2012</td>
                         <td>7 мая 2018</td>
                         <td>6 лет</td>
-                        <td rowspan="2">
-                            <p>В. А. Зубков</p>
-                            <p>Д. А. Медведев</p>
-                            <p>М. В. Мишустин</p>
-                            <p>А. Р. Белоусов</p>
-                            <p>М. В. Мишустин</p>
-                        </td>
+
                     </tr>
                     <tr>
                         <td style="background: red;">4</td>
@@ -277,6 +252,31 @@
             <br>
             <p>
             <div id="part"></div> - Единная Россия</p>
+            <br>
+
+            <div class="president">
+                <h3>Фото Президентов Российский Федерации</h3>
+                <div class="elsin">
+                    <img src="Boris.jpg" alt="" class="pres">
+
+                    <figcaption>Борис
+                        Николаевич Ельцин</figcaption>
+                </div>
+                <div class="putin">
+                    <img src="Vladimir_Vladimirovich_Putin.jpg" alt="" class="pres">
+                    <figcaption>Владимир Владимирович Путин</figcaption>
+                </div>
+                <div class="medvedev">
+                    <img src="Dmitry_Anatolyevich_Medvedev.jpg" alt="" class="pres">
+                    <figcaption>Дмитрий Анатольевич Медведев</figcaption>
+                </div>
+                <div class="putin">
+                    <img src="Vladimir_Vladimirovich_Putin_(2nd_Presidency).jpg" alt="" class="pres">
+                    <figcaption>Владимир Владимирович Путин</figcaption>
+                </div>
+
+            </div>
+
             <h2>Россия и США</h2>
             <hr>
             <h3>Американцы хотят вмешиваться в правления нашей страны</h3>
