--- a/country/index.html
+++ b/country/index.html
@@ -53,12 +53,12 @@
                         <th scope="col">Герб</th>
                         <th scope="col">Флаг</th>
                         <th scope="col">Столица</th>
-                        <th scope="col">Глава / Президент</th>
+                        <th scope="col">Глава / <br>Президент<br></th>
 
-                        <th scope="col">Дата независимости / дата распада СССР</th>
-                        <th scope="col">Территория (км<sup>2</sup>)</th>
+                        <th scope="col">Дата <br> незави-<br>симости / <br> дата <br> распада <br> СССР</th>
+                        <th scope="col">Территория <br> (км<sup>2</sup>)</th>
                         <th scope="col">Население</th>
-                        <th scope="col">Плотность населения (чел./ км<sup>2</sup>)</th>
+                        <th scope="col">Плотность <br> населения <br> (чел./ км<sup>2</sup>)</th>
 
                     </tr>
                 </thead>
@@ -70,7 +70,7 @@
                         <td>Москва</td>
                         <td>Михаил <br> Сергеевич <br> Горбачёв</td>
 
-                        <td>26 декабря 1991</td>
+                        <td>26 <br> декабря <br> 1991</td>
                         <td>22 402 200</td>
                         <td>292 610 734</td>
                         <td>13,1</td>
@@ -97,7 +97,7 @@
                         <td>Владимир <br> Владимирович <br> Путин</td>
 
                         </td>
-                        <td>12 декабря 1991</td>
+                        <td>12 <br>декабря <br> 1991</td>
                         <td>17 125 191</td>
                         <td>146 781 095</td>
                         <td>8,56</td>
@@ -112,7 +112,7 @@
                         <td>Владимир <br> Александрович <br> Зеленский</td>
 
                         </td>
-                        <td>24 августа 1991</td>
+                        <td>24 <br>августа <br>1991</td>
                         <td>603 549</td>
                         <td>42 248 598</td>
                         <td>73,92</td>
@@ -126,7 +126,7 @@
                         <td>Минск</td>
                         <td>Александр <br> Григорьевич <br> Лукашенко</td>
 
-                        <td>25 августа 1991</td>
+                        <td>25 <br> августа <br> 1991</td>
                         <td>207 600</td>
                         <td>9 475 600</td>
                         <td>47,89</td>
@@ -140,7 +140,7 @@
                         <td>Донецк</td>
                         <td>Денис <br> Владимирович <br> Пушилин</td>
 
-                        <td>7 апреля 2014  <br>(от Украины)</td>
+                        <td>7 <br> апреля <br> 2014  <br>(от Украины)</td>
                         <td>7 853</td>
                         <td>2 244 547</td>
                         <td>285,82</td>
@@ -153,7 +153,7 @@
                         <td>Луганск</td>
                         <td>Леонид <br> Иванович <br> Пасечник</td>
 
-                        <td>12 мая 2014 <br> (от Украины)</td>
+                        <td>12 <br> мая <br> 2014 <br> (от Украины)</td>
                         <td>8 377</td>
                         <td>1 450 000</td>
                         <td>173,09</td>
