--- a/country/russia/index.html
+++ b/country/russia/index.html
@@ -160,7 +160,7 @@
                         <th scope="col">№ </th>
                         <th scope="col">Срок</th>
 
-                        <th scope="col"> Имя Отчество Фамилия (Год жизни)</th>
+                        <th scope="col"> Имя <br> Отчество <br> Фамилия <br> (Год жизни)</th>
                         <th scope="col" colspan="2">Срок полномочий</th>
                         <th scope="col">Срок в годах и месяцах</th>
 
@@ -171,38 +171,38 @@
                         <th scope="row" rowspan="2" style="background: red;">1</th>
                         <td>1</td>
 
-                        <td rowspan="2"><a href="https://ru.wikipedia.org/wiki/Ельцин,_Борис_Николаевич">Борис
-                                Николаевич Ельцин</a> <br> (1931—2007)</td>
+                        <td rowspan="2"><a href="https://ru.wikipedia.org/wiki/Ельцин,_Борис_Николаевич">Борис <br>
+                                Николаевич <br> Ельцин</a> <br> (1931—2007)</td>
                         <td>10 июля 1991</td>
                         <td>9 августа 1996</td>
-                        <td>4 года 7 месяцев 9 дней</td>
+                        <td>4 года <br> 7 месяцев <br> 9 дней</td>
 
                     </tr>
                     <tr>
                         <td>2</td>
                         <td>9 августа 1996</td>
                         <td>31 декабря 1999</td>
-                        <td>3 года 4 месяца 22 дня</td>
+                        <td>3 года <br> 4 месяца <br> 22 дня</td>
                     </tr>
                     <tr>
                         <th scope="row" style="background: red;">-</th>
                         <td>-</td>
 
                         <td>
-                            <a href="https://ru.wikipedia.org/wiki/Путин,_Владимир_Владимирович">Владимир
-                                Владимирович Путин</a> <br> <small>(исполняющий обязанности)</small>
+                            <a href="https://ru.wikipedia.org/wiki/Путин,_Владимир_Владимирович">Владимир <br>
+                                Владимирович <br> Путин</a> <br> <small>(исполняющий  обязанности)</small>
                         </td>
                         <td>31 декабря 1999</td>
                         <td>7 мая 2000</td>
-                        <td>4 месяцев, 1 неделя</td>
+                        <td>4 месяцев <br> 1 неделя</td>
 
 
                     </tr>
                     <tr>
                         <th scope="row" rowspan="2" style="background: red;">2</th>
                         <td>1</td>
-                        <td rowspan="2"><a href="https://ru.wikipedia.org/wiki/Путин,_Владимир_Владимирович">Владимир
-                                Владимирович Путин</a> <br> (р. 1952)</td>
+                        <td rowspan="2"><a href="https://ru.wikipedia.org/wiki/Путин,_Владимир_Владимирович">Владимир <br>
+                                Владимирович <br> Путин</a> <br> (р. 1952)</td>
                         <td>7 мая 2000</td>
                         <td>7 мая 2004</td>
                         <td>4 года</td>
@@ -218,7 +218,7 @@
                         <th scope="row" style="background: blue;">3</th>
                         <td>1</td>
 
-                        <td><a href="https://ru.wikipedia.org/wiki/Медведев,_Дмитрий_Анатольевич">Дмитрий Анатольевич
+                        <td><a href="https://ru.wikipedia.org/wiki/Медведев,_Дмитрий_Анатольевич">Дмитрий <br> Анатольевич <br>
                                 Медведев</a> <br> (р. 1965)</td>
                         <td>7 мая 2008</td>
                         <td>7 мая 2012</td>
@@ -230,8 +230,8 @@
                         <td>3</td>
 
                         </td>
-                        <td rowspan="2"><a href="https://ru.wikipedia.org/wiki/Путин,_Владимир_Владимирович">Владимир
-                                Владимирович Путин</a> <br> (р. 1952)</td>
+                        <td rowspan="2"><a href="https://ru.wikipedia.org/wiki/Путин,_Владимир_Владимирович">Владимир <br>
+                                Владимирович <br> Путин</a> <br> (р. 1952)</td>
                         <td>7 мая 2012</td>
                         <td>7 мая 2018</td>
                         <td>6 лет</td>
@@ -242,7 +242,7 @@
                         <td>4
                         </td>
                         <td>7 мая 2018</td>
-                        <td>срок истекает 7 мая 2024</td>
+                        <td>срок истекает <br> 7 мая 2024</td>
                         <td>6 лет</td>
                     </tr>
                 </tbody>
@@ -264,7 +264,7 @@
                 </div>
                 <div class="putin">
                     <img src="Vladimir_Vladimirovich_Putin.jpg" alt="" class="pres">
-                    <figcaption>Владимир Владимирович Путин</figcaption>
+                    <figcaption>Владимир Владимирович Путин <br> <i>(1 и 2 президентские сроки)</i></figcaption>
                 </div>
                 <div class="medvedev">
                     <img src="Dmitry_Anatolyevich_Medvedev.jpg" alt="" class="pres">
@@ -272,7 +272,7 @@
                 </div>
                 <div class="putin">
                     <img src="Vladimir_Vladimirovich_Putin_(2nd_Presidency).jpg" alt="" class="pres">
-                    <figcaption>Владимир Владимирович Путин</figcaption>
+                    <figcaption>Владимир Владимирович Путин <br><i>(3 и 4 президентские сроки)</i></figcaption>
                 </div>
 
             </div>
