--- a/country/belarus/index.html
+++ b/country/belarus/index.html
@@ -192,7 +192,7 @@
             </table>
             <div class="president">
                 <div class="lukashenko">
-                    <img src="Lukashenko.jpg" alt="">
+                    <img src="Lukashenko.jpg" class="pres">
                     <figcaption>Лукашенко</figcaption>
                 </div>
 
