--- a/country/ukraine/gos-simvolika/index.html
+++ b/country/ukraine/gos-simvolika/index.html
@@ -40,7 +40,7 @@
                 Герб Украи́ны (укр. Герб України) — один из трёх официальных символов государства, наряду с флагом и
                 гимном. Состоит из Малого и Большого гербов. В настоящее время используется в основном только Малый
                 герб,
-                <img src="/political-na-postsovet-space/country/ukraine/gerb-of-ukraine.png" alt="">
+                <img src="/political-na-postsovet-space/country/ukraine/gerb-of-ukraine.png" alt="" class="photo">
                 утверждённый 19 февраля 1992 года.
             </p>
             <br>
@@ -61,7 +61,7 @@
                 официальный государственный символ Украины (наряду с гербом и гимном), а также один из национальных
                 символов украинцев.
                 Представляет собой прямоугольное полотнище из двух <img
-                    src="/political-na-postsovet-space/country/ukraine/flag-of-ukraine.png"> равновеликих горизонтальных
+                    src="/political-na-postsovet-space/country/ukraine/flag-of-ukraine.png" class="photo"> равновеликих горизонтальных
                 полос: верхней —
                 синего и
                 нижней — жёлтого цвета. Отношение ширины флага к его длине 2:3. Часто на практике оттенок синего может
