--- a/country/ukraine/gos-system/index.html
+++ b/country/ukraine/gos-system/index.html
@@ -150,7 +150,7 @@
                     <tr>
                         <th scope="row" style="background: #7f7fff;">6</th>
                         <td>1</td>
-                        <td><img src="100px-Volodymyr_Zelensky_Official_portrait_(cropped).jpg" alt=""></td>
+                        <td><img src="800px-Volodymyr_Zelensky_Official_portrait.jpg" alt="" width="100px"></td>
                         <td>Владимир Александрович Зеленский</td>
                         <td>20 мая 2019</td>
                         <td>в должности</td>
